--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/edwardfhsiao/edwardxiao#readme",
   "dependencies": {
     "arale-qrcode": "^3.0.5",
+    "bcrypt": "^1.0.2",
     "bowser": "^1.6.0",
     "fs": "0.0.2",
     "fullpage.js": "^2.9.2",
