--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "pm2": "^2.2.3",
     "pug": "^2.0.0-beta6",
     "purifycss-webpack-plugin": "^2.0.3",
+    "qiniu": "^6.1.13",
     "react": "^15.3.1",
     "react-addons-create-fragment": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
@@ -67,6 +68,7 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "spin.js": "^2.3.2",
+    "svg-captcha": "^1.3.0",
     "weixin-js-sdk": "^1.0.7",
     "xss": "^0.3.3"
   },
