--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-rte": "^0.11.0",
     "redis": "^2.6.2",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
