--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-rte": "^0.11.0",
+    "react-rte-image": "^0.11.1",
     "redis": "^2.6.2",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
