--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
     "koa-views": "^5.0.2",
+    "masonry-layout": "^4.1.1",
     "migrate": "^0.2.3",
     "moment": "^2.14.1",
     "mongoose": "^4.7.5",
@@ -61,6 +62,7 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-update": "^15.4.1",
     "react-dom": "^15.3.0",
+    "react-masonry-component": "^5.0.3",
     "react-paginate": "^4.1.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
