assets on Qiniu

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pm2": "NODE_ENV=production ./node_modules/.bin/pm2 start index.js -i 2 --name \"edwardxiao\" --max-memory-restart 300M --merge-logs --log-date-format=\"YYYY-MM-DD HH:mm Z\" --output=\"log/production.log\"",
+    "pm2": "APP_VERSION=$npm_package_version bnr pro:app:start",
     "start_dev": "./node_modules/.bin/nodemon index.js & npm run build_dev",
     "start_prod": "./node_modules/.bin/nodemon index.js & npm run build_prod",
     "webpack_dev": "NODE_ENV=development webpack --config app/frontend/webpack/development.config.js --progress --watch",
@@ -14,6 +14,10 @@
     "webpack_dll_prod": "NODE_ENV=production webpack --config app/frontend/webpack/vendor-bundles.webpack.config.production.js -p",
     "build_dev": "rm -rf public/assets && npm run webpack_dll_prod && npm run webpack_dev",
     "build_prod": "rm -rf public/assets && npm run webpack_dll_prod && npm run webpack_prod",
+    "deploy_cdn": "APP_VERSION=$npm_package_version NODE_ENV=production node ./scripts/deploy_cdn.js",
+    "deploy_cdn_dev": "NODE_ENV=development node ./scripts/deploy_cdn.js",
+    "deploy": "git checkout master && git pull origin master && rm -rf node_modules && cnpm i && npm run build_prod && npm run deploy_cdn && npm run pm2:restart",
+    "deploy_dev": "git checkout master && git pull gitlab master && rm -rf node_modules && cnpm i && npm run build_dev && npm run deploy_cdn_dev && npm run pm2_dev:restart",
     "migrate_up": "./node_modules/.bin/migrate up",
     "migrate_down": "./node_modules/.bin/migrate down",
     "migrate_create": "./node_modules/.bin/migrate create add-pets"
@@ -37,6 +41,7 @@
     "fs": "0.0.2",
     "fullpage.js": "^2.9.2",
     "jquery": "^3.1.1",
+    "klaw-sync": "^1.1.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
