--- a/public/assets/rev-manifest.json
+++ b/public/assets/rev-manifest.json
@@ -1,10 +1,10 @@
 {
-  "base.css": "css/base-0b492253cec7c1a90b06.css",
-  "base.css.map": "css/base-0b492253cec7c1a90b06.css.map",
+  "base.css": "css/base-cf8983aea215a6556fec.css",
+  "base.css.map": "css/base-cf8983aea215a6556fec.css.map",
   "base.js": "base-6cdb26f7d3fc1b818f61.js",
   "base.js.map": "base-6cdb26f7d3fc1b818f61.js.map",
-  "common.js": "common-0b492253cec7c1a90b06.js",
-  "common.js.map": "common-0b492253cec7c1a90b06.js.map",
+  "common.js": "common-cf8983aea215a6556fec.js",
+  "common.js.map": "common-cf8983aea215a6556fec.js.map",
   "font/fontawesome-webfont.eot?v=4.7.0": "font/fontawesome-webfont.eot",
   "font/fontawesome-webfont.ttf?v=4.7.0": "font/fontawesome-webfont.ttf",
   "font/fontawesome-webfont.woff2?v=4.7.0": "font/fontawesome-webfont.woff2",
@@ -15,12 +15,20 @@
   "font/glyphicons-halflings-regular.woff2": "font/glyphicons-halflings-regular.woff2",
   "font/icomoon.ttf": "font/icomoon.ttf",
   "font/icomoon.woff": "font/icomoon.woff",
+  "img/article.jpg": "img/article.jpg",
+  "img/contact.jpg": "img/contact.jpg",
   "img/fontawesome-webfont.svg?v=4.7.0": "img/fontawesome-webfont.svg",
   "img/glyphicons-halflings-regular.svg": "img/glyphicons-halflings-regular.svg",
+  "img/graphic-design.jpg": "img/graphic-design.jpg",
   "img/home-2.jpg": "img/home-2.jpg",
   "img/icomoon.svg": "img/icomoon.svg",
-  "index.css": "css/index-0b492253cec7c1a90b06.css",
-  "index.css.map": "css/index-0b492253cec7c1a90b06.css.map",
-  "index.js": "index-412be119a687f4331693.js",
-  "index.js.map": "index-412be119a687f4331693.js.map"
+  "img/industrial-design.jpg": "img/industrial-design.jpg",
+  "img/intro.jpg": "img/intro.jpg",
+  "img/logo-design-sm.jpg": "img/logo-design-sm.jpg",
+  "img/photograph.jpg": "img/photograph.jpg",
+  "img/web-design.jpg": "img/web-design.jpg",
+  "index.css": "css/index-cf8983aea215a6556fec.css",
+  "index.css.map": "css/index-cf8983aea215a6556fec.css.map",
+  "index.js": "index-103bc2ad4d9d5f3e40f2.js",
+  "index.js.map": "index-103bc2ad4d9d5f3e40f2.js.map"
 }
