--- a/package.json
+++ b/package.json
@@ -36,17 +36,6 @@
   "homepage": "https://github.com/edwardfhsiao/edwardxiao#readme",
   "dependencies": {
     "arale-qrcode": "^3.0.5",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-loader": "^6.1.0",
-    "babel-register": "^6.9.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.14。0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.11.6",
     "bcrypt": "^1.0.2",
     "blazy": "^1.8.2",
     "bowser": "^1.6.0",
@@ -99,6 +88,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.6.0",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.1.0",
+    "babel-register": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bootstrap-sass": "^3.3.7",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
