--- a/public/assets/rev-manifest.json
+++ b/public/assets/rev-manifest.json
@@ -1,11 +1,8 @@
 {
-  "base.css": "css/base-6d8ce2b828aa8ce0241a.css",
-  "base.css.map": "css/base-6d8ce2b828aa8ce0241a.css.map",
-  "base.js": "base-b7cecb2a1a6289de8765.js",
-  "base.js.map": "base-b7cecb2a1a6289de8765.js.map",
-  "common.js": "common-6d8ce2b828aa8ce0241a.js",
-  "common.js.map": "common-6d8ce2b828aa8ce0241a.js.map",
-  "font/fontawesome-webfont.eot?v=4.7.0": "font/fontawesome-webfont.eot",
+  "base.css": "css/base.css",
+  "base.js": "js/base.js",
+  "common.js": "common.js",
+  "font/fontawesome-webfont.eot": "font/fontawesome-webfont.eot",
   "font/fontawesome-webfont.ttf?v=4.7.0": "font/fontawesome-webfont.ttf",
   "font/fontawesome-webfont.woff2?v=4.7.0": "font/fontawesome-webfont.woff2",
   "font/fontawesome-webfont.woff?v=4.7.0": "font/fontawesome-webfont.woff",
@@ -27,8 +24,6 @@
   "img/logo-design-sm.jpg": "img/logo-design-sm.jpg",
   "img/photograph.jpg": "img/photograph.jpg",
   "img/web-design.jpg": "img/web-design.jpg",
-  "index.css": "css/index-6d8ce2b828aa8ce0241a.css",
-  "index.css.map": "css/index-6d8ce2b828aa8ce0241a.css.map",
-  "index.js": "index-0ba55cec6dd9cb49ae7a.js",
-  "index.js.map": "index-0ba55cec6dd9cb49ae7a.js.map"
+  "index.css": "css/index.css",
+  "index.js": "js/index.js"
 }
