--- a/public/assets/rev-manifest.json
+++ b/public/assets/rev-manifest.json
@@ -1,8 +1,11 @@
 {
-  "base.css": "css/base.css",
-  "base.js": "js/base.js",
-  "common.js": "common.js",
-  "font/fontawesome-webfont.eot": "font/fontawesome-webfont.eot",
+  "base.css": "css/base-96d2e658434e20bfba37.css",
+  "base.css.map": "css/base-96d2e658434e20bfba37.css.map",
+  "base.js": "base-fd1c46f83a6895b101c3.js",
+  "base.js.map": "base-fd1c46f83a6895b101c3.js.map",
+  "common.js": "common-96d2e658434e20bfba37.js",
+  "common.js.map": "common-96d2e658434e20bfba37.js.map",
+  "font/fontawesome-webfont.eot?v=4.7.0": "font/fontawesome-webfont.eot",
   "font/fontawesome-webfont.ttf?v=4.7.0": "font/fontawesome-webfont.ttf",
   "font/fontawesome-webfont.woff2?v=4.7.0": "font/fontawesome-webfont.woff2",
   "font/fontawesome-webfont.woff?v=4.7.0": "font/fontawesome-webfont.woff",
@@ -24,6 +27,8 @@
   "img/logo-design-sm.jpg": "img/logo-design-sm.jpg",
   "img/photograph.jpg": "img/photograph.jpg",
   "img/web-design.jpg": "img/web-design.jpg",
-  "index.css": "css/index.css",
-  "index.js": "js/index.js"
+  "index.css": "css/index-96d2e658434e20bfba37.css",
+  "index.css.map": "css/index-96d2e658434e20bfba37.css.map",
+  "index.js": "index-79fcf7e2d0988577328b.js",
+  "index.js.map": "index-79fcf7e2d0988577328b.js.map"
 }
