--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fs": "0.0.2",
     "fullpage.js": "^2.9.2",
     "jquery": "^3.1.1",
+    "jsdom": "^9.11.0",
     "klaw-sync": "^1.1.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
