home server-side rendering

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "webpack_dev": "NODE_ENV=development webpack --config app/frontend/webpack/development.config.js --progress --watch",
     "webpack_prod": "NODE_ENV=production webpack --config app/frontend/webpack/production.config.js --progress -p",
     "webpack_prod_display_error": "NODE_ENV=production webpack --config app/frontend/webpack/production.config.js --progress -display-error-details -p",
-    "webpack_dll_dev": "NODE_ENV=development webpack --config app/frontend/webpack/vendor-bundles.webpack.config.js -p",
+    "webpack_dll_dev": "NODE_ENV=development webpack --config app/frontend/webpack/vendor-bundles.webpack.config.js",
     "webpack_dll_prod": "NODE_ENV=production webpack --config app/frontend/webpack/vendor-bundles.webpack.config.production.js -p",
     "build_dev": "rm -rf public/assets && npm run webpack_dll_dev && npm run webpack_dev",
     "build_prod": "rm -rf public/assets && npm run webpack_dll_prod && npm run webpack_prod",
@@ -42,9 +42,7 @@
     "bowser": "^1.6.0",
     "font-awesome": "^4.7.0",
     "fs": "0.0.2",
-    "fullpage.js": "^2.9.2",
     "jquery": "^3.1.1",
-    "jsdom": "^9.11.0",
     "klaw-sync": "^1.1.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
